Changes in 1.8.1 (not yet released)

 - Fix compiling errors for c++ builder (thx @Greatwolf for many patches and @cfanderek for reminding)
 - Initialized IColladaMeshWriter::GeometryWriting which was uninitialized.
 - Fix linker trouble with irr::core::equalsByUl when compiling Irrlicht as managed code (thx @  Memorial76 for a report + testcase)
 - Fix crashes in CCubeSceneNode::clone and CSphereSceneNode::clone (reported by  marsupial)
 - Fix the clipping in the listbox drawing which was only showing the right line of the sunken pane (reported by Mloren and Abraxas).
 - Initialize slider in example 05 correct (reported by Zerochen)
 - Fix crash in CMeshSceneNode::clone when the mesh had no shadow (reported by  christianclavet, bug-fix found by Nadro)

--------------------------
Changes in 1.8 (7.11.2012)

 - Let sphere mesh use full opaque color, just as all the other ones do

 - Gcc on Win32 (MinGW) now also works with the _w file access functions when compiled with _IRR_WCHAR_FILESYSTEM. (thx @ alexzk for reporting compile troubles)

 - Fix a bunch of off-by one errors in irr::core::string in functions equals_substring_ignore_case, findFirst, findFirstChar, findNext, findLast, findLastChar, replace, remove and removeChars.
   This prevents some potential memory access errors, find functions no longer try to find the \0, replace no longer replaces the \0 and remove no longer tries to remove it (which did remove the last character instead).

 - matrix4::setRotationAxisRadians added

 - user clipplanes fixed

 - Skip rendering of lines, points, and polygons, as these lead to crahses due to wrong access to the vertex lists. A fix would need major rewrite of the vertex cache, or at least some other render methods.

 - Add mipmap generation for makeColorKeyTexture

 - Add another saveScene overload which allows to pass in a user-created XMLWriter. Patch suggested by eversilver.

 - quaternion conversions to and from matrix4 no longer invert rotations. 